clusters/dev/app/namespace-isp.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: isp
spec: {}
status: {}
