clusters/dev/app/namespace-opa.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: opa
spec: {}
status: {}
