clusters/dev/app/deployment-opa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opa
  labels:
    app: opa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opa
  template:
    metadata:
      labels:
        app: opa
      name: opa
    spec:
      containers:
      - name: opa
        image: openpolicyagent/opa:0.29.4
        ports:
        - name: http
          containerPort: 8181
        args:
        - run
        - --ignore=.*  # exclude hidden dirs created by Kubernetes
        - --server
        - /policies
        volumeMounts:
        - readOnly: true
          mountPath: /policies
          name: example-policy
      volumes:
      - name: example-policy
        configMap:
          name: example-policy
