clusters/dev/app/opa-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: opa
  name: opa
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8181
  selector:
    app: opa
  type: LoadBalancer
status:
  loadBalancer: {}
