clusters/dev/app/webhook-configuration.yaml
kind: ValidatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1beta1
metadata:
  name: opa-validating-webhook
webhooks:
  - name: validating-webhook.openpolicyagent.org
    namespaceSelector:
      matchExpressions:
      - key: openpolicyagent.org/webhook
        operator: NotIn
        values:
        - ignore
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["*"]
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFVENDQWZtZ0F3SUJBZ0lVSUdSaDNwSlNHUjBZS1V5NXBUM1Y3UWRnMlJvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0Z6RVZNQk1HQTFVRUF3d01ZV1J0YVhOemFXOXVYMk5oTUNBWERUSXhNRFl4TXpBeU5UWTFNbG9ZRHpJeQpPVFV3TXpJNU1ESTFOalV5V2pBWE1SVXdFd1lEVlFRRERBeGhaRzFwYzNOcGIyNWZZMkV3Z2dFaU1BMEdDU3FHClNJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUN1U0syUXdabXUwdDlmTDhqWCtiaElPQWZncmhQYWIyYksKTXgyK0NOQlBpdWEzYW5YTEZUMlZaZXFxaDJ1cEtUY29oMDlyQ0tMZ0V5VEFhNXRrbDlUcDhUR2RXdmFKUzhSYQpWMnBSZ2Fsdkcx [...]
      service:
        namespace: opa
        name: opa
